# routes/web.php
@@ -1,6 +1,5 @@
 <?php
 
-use App\Http\Controllers\SocialiteController;
 use Illuminate\Foundation\Auth\EmailVerificationRequest;
 use Illuminate\Support\Facades\Route;
 
@@ -13,8 +12,3 @@ Route::get('/email/verify/{id}/{hash}', function (EmailVerificationRequest $requ
         'message' => 'Email verified successfully.',
     ]);
 })->middleware(['auth', 'signed'])->name('verification.verify');
-
-Route::get('/auth/{provider}/redirect', [SocialiteController::class, 'redirect'])
-    ->name('socialite.redirect');
-Route::get('/auth/{provider}/callback', [SocialiteController::class, 'callback'])
-    ->name('socialite.callback');
